--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Learn AWS Cognito</title>
   </head>
   <body style="font-family: sans-serif">
     <h1 style="text-align: center">Learn AWS Cognito</h1>
